Fix the wrap bug

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   font-family: 'Open sans', 'STHeitiSC-Light', Arial, sans-serif;
   margin: 0;
   padding: 10px;
+  min-width: 300px;
 }
 
 ul {
@@ -102,7 +103,7 @@ li {
   text-align: center;
 }
 
-.person__result .large {
+.person__result.large {
   width: 40%;
   text-align: center;
 }
